Adding some more components

--- a/src/app/wish-filter/wish-filter.component.html
+++ b/src/app/wish-filter/wish-filter.component.html
@@ -1,4 +1,4 @@
-<select name="listFilter" class="form-select form-select-sm m-3" [(ngModel)]="listFilter"
+<select name="listFilter"  [(ngModel)]="listFilter"
     (ngModelChange)="updateFilter($event)">
     <option value="0">ALL</option>
     <option value="1">COMPLETED</option>
