--- a/src/app/wish/wish-list-item/wish-list-item.component.html
+++ b/src/app/wish/wish-list-item/wish-list-item.component.html
@@ -1,8 +1,8 @@
 <li class="list-group-item m-1 d-flex justify-content-between">
     <div class="form-check">
-        <input type="checkbox" class="form-check-input" (click)="toggleFullfill()" [checked]="fullfilled" />
+        <input type="checkbox" class="form-check-input" (click)="toggleFullfill()" [checked]="wish.isComplete" />
         <label class="form-check-label" for="flexCheckDefault" [ngClass]="cssClasses">
-            {{ wishText }}
+            {{ wish.wishText }}
         </label>
     </div>
     <div>
